--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,9 @@ cache:
     - node_modules
 
 node_js:
-  - "10"
-  - "12"
-  - "node"
+  - '10'
+  - '12'
+  - 'node'
 
 script:
   - npm run eslint
@@ -19,4 +19,3 @@ script:
 after_script:
   - npm install coveralls
   - nyc report --reporter=text-lcov | coveralls
-
